{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 386,
  "lineage": "85edd228-7fed-e524-17e5-861bd1ded7d5",
  "resources": [
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "smart_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:loadbalancer/app/lb-smart-home/2bae89ee788d65ba",
            "arn_suffix": "app/lb-smart-home/2bae89ee788d65ba",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-smart-home-993161659.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:loadbalancer/app/lb-smart-home/2bae89ee788d65ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-smart-home",
            "preserve_host_header": false,
            "security_groups": [
              "sg-050caa0e8ea99ca44",
              "sg-06312160dbf0be836",
              "sg-080b6e1fe7e11991a",
              "sg-094cbc75273d8ea33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-077665312eddcdf8b"
              },
              {
                "subnet_id": "subnet-0bfa9717f8e861736"
              },
              {
                "subnet_id": "subnet-0f6c74006ebfaf49e"
              }
            ],
            "subnets": [
              "subnet-077665312eddcdf8b",
              "subnet-0bfa9717f8e861736",
              "subnet-0f6c74006ebfaf49e"
            ],
            "vpc_id": "vpc-06bd33e27a48e492f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "smart_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/lighting/efe0a8cfe02b7c68",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:loadbalancer/app/lb-smart-home/2bae89ee788d65ba",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.smart_home",
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "smart_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/lighting/efe0a8cfe02b7c68",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener-rule/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010/b766a0c2923c27a4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener-rule/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010/b766a0c2923c27a4",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.smart_home",
            "module.load_balancing.aws_lb_listener.smart_home",
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/heating/df9b9dcd1e0f9b00",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener-rule/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010/2b4b1f12e7e7de8c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener-rule/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010/2b4b1f12e7e7de8c",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010",
            "priority": 3,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.smart_home",
            "module.load_balancing.aws_lb_listener.smart_home",
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/status/06bbd6f4c626a525",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener-rule/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010/3c08904a6839c9ee",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener-rule/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010/3c08904a6839c9ee",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:listener/app/lb-smart-home/2bae89ee788d65ba/fff17dcce4272010",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.smart_home",
            "module.load_balancing.aws_lb_listener.smart_home",
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "smart_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/lighting/efe0a8cfe02b7c68",
            "arn_suffix": "targetgroup/lighting/efe0a8cfe02b7c68",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/lighting/efe0a8cfe02b7c68",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lighting",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/heating/df9b9dcd1e0f9b00",
            "arn_suffix": "targetgroup/heating/df9b9dcd1e0f9b00",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/heating/df9b9dcd1e0f9b00",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/status/06bbd6f4c626a525",
            "arn_suffix": "targetgroup/status/06bbd6f4c626a525",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/status/06bbd6f4c626a525",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "smart_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/lighting/efe0a8cfe02b7c68-20240109182637735900000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/lighting/efe0a8cfe02b7c68",
            "target_id": "i-0913851face007f1c"
          },
          "dependencies": [
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.services_servers.aws_instance.services_servers"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/heating/df9b9dcd1e0f9b00-20240109182637818800000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/heating/df9b9dcd1e0f9b00",
            "target_id": "i-0c398931cc774125e"
          },
          "dependencies": [
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.services_servers.aws_instance.services_servers"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/status/06bbd6f4c626a525-20240109182637744200000008",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:401404824186:targetgroup/status/06bbd6f4c626a525",
            "target_id": "i-07dd90a221908d770"
          },
          "dependencies": [
            "module.load_balancing.aws_lb_target_group.smart_home",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.services_servers.aws_instance.services_servers"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:internet-gateway/igw-0bfb54367129a808f",
            "id": "igw-0bfb54367129a808f",
            "owner_id": "401404824186",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:route-table/rtb-058e6d0aaf8e190a7",
            "id": "rtb-058e6d0aaf8e190a7",
            "owner_id": "401404824186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfb54367129a808f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fd3305d0ffc1a7e",
            "route_table_id": "rtb-058e6d0aaf8e190a7",
            "subnet_id": "subnet-0bfa9717f8e861736"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01829cf6cb8d6560a",
            "route_table_id": "rtb-058e6d0aaf8e190a7",
            "subnet_id": "subnet-077665312eddcdf8b"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06677015a21e4b6c9",
            "route_table_id": "rtb-058e6d0aaf8e190a7",
            "subnet_id": "subnet-0f6c74006ebfaf49e"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:subnet/subnet-01aa28823e21d64bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aa28823e21d64bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401404824186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:subnet/subnet-071e747f16ff86392",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e747f16ff86392",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401404824186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:subnet/subnet-07480e496ec9970c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07480e496ec9970c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "401404824186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:subnet/subnet-0bfa9717f8e861736",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfa9717f8e861736",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401404824186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:subnet/subnet-077665312eddcdf8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077665312eddcdf8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401404824186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:subnet/subnet-0f6c74006ebfaf49e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6c74006ebfaf49e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401404824186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "smart_home",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:vpc/vpc-06bd33e27a48e492f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0822f485117844995",
            "default_route_table_id": "rtb-0e6c6da2d3886d44f",
            "default_security_group_id": "sg-09d06826957ad1535",
            "dhcp_options_id": "dopt-01c0da21ed5b5a7a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bd33e27a48e492f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6c6da2d3886d44f",
            "owner_id": "401404824186",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:security-group/sg-080b6e1fe7e11991a",
            "description": "Allow egress inbound traffic",
            "egress": [],
            "id": "sg-080b6e1fe7e11991a",
            "ingress": [],
            "name": "allow_egress",
            "name_prefix": "",
            "owner_id": "401404824186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Egress"
            },
            "tags_all": {
              "Name": "Egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:security-group/sg-050caa0e8ea99ca44",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-050caa0e8ea99ca44",
            "ingress": [],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "401404824186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http"
            },
            "tags_all": {
              "Name": "http"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:security-group/sg-094cbc75273d8ea33",
            "description": "Allow https inbound traffic",
            "egress": [],
            "id": "sg-094cbc75273d8ea33",
            "ingress": [],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "401404824186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTPS"
            },
            "tags_all": {
              "Name": "HTTPS"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:401404824186:security-group/sg-06312160dbf0be836",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-06312160dbf0be836",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "401404824186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "Name": "SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bd33e27a48e492f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-3171964401",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050caa0e8ea99ca44",
            "security_group_rule_id": "sgr-0f015c00145d03fcc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3453191713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-080b6e1fe7e11991a",
            "security_group_rule_id": "sgr-096b8806793359942",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3304003406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-050caa0e8ea99ca44",
            "security_group_rule_id": "sgr-0c98af2da21294b09",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-345921677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-094cbc75273d8ea33",
            "security_group_rule_id": "sgr-032174c6a47418754",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_https"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "90.221.119.114/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3128840287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06312160dbf0be836",
            "security_group_rule_id": "sgr-0e3e6205ab4ab90a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.services_servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "services_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075309d792f0a9757",
            "arn": "arn:aws:ec2:eu-west-2:401404824186:instance/i-0913851face007f1c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0913851face007f1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kyraskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0299301694a44a114",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-18-171-192-10.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.192.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08610df15d176dcbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfa9717f8e861736",
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050caa0e8ea99ca44",
              "sg-06312160dbf0be836",
              "sg-080b6e1fe7e11991a",
              "sg-094cbc75273d8ea33"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5c3c78fbc5af895",
            "arn": "arn:aws:ec2:eu-west-2:401404824186:instance/i-0c398931cc774125e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c398931cc774125e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kyraskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf28391d65ff8f40",
            "private_dns": "ip-10-0-3-43.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.43",
            "public_dns": "ec2-13-40-198-122.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.198.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bad8538f69fdf54a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077665312eddcdf8b",
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050caa0e8ea99ca44",
              "sg-06312160dbf0be836",
              "sg-080b6e1fe7e11991a",
              "sg-094cbc75273d8ea33"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008c133f425ff792c",
            "arn": "arn:aws:ec2:eu-west-2:401404824186:instance/i-07dd90a221908d770",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07dd90a221908d770",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "kyraskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf515680bbcd3daa",
            "private_dns": "ip-10-0-5-244.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.244",
            "public_dns": "ec2-18-133-122-98.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.122.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0377eb2a2148bcc47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6c74006ebfaf49e",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050caa0e8ea99ca44",
              "sg-06312160dbf0be836",
              "sg-080b6e1fe7e11991a",
              "sg-094cbc75273d8ea33"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.smart_home",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    }
  ]
}